add getme and rf-tk
