# routes/authRouter.js
@@ -4,6 +4,7 @@ const router = express.Router()
 const controller = require("./../controller/authController")
 const userValidatorSchema = require("./../validator/authValidator")
 const userValidatorMiddleware = require("./../middleware/userValidator")
+const authGourd = require("./../middleware/authGourd")
 
 router
     .route("/signup")
@@ -14,5 +15,11 @@ router
 router
     .route("/login")
     .post(controller.login)
+router
+    .route("/getMe")
+    .get(authGourd, controller.getme)
+router
+    .route("/refresh-token")
+    .get(controller.genRefreshToken)
 
 module.exports = router
